examples/test/testpolicy9720.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9720
  namespace: namespace20
spec:
  podSelector:
    matchLabels:
      key4: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value25
          key17: value7
          key1: value5
      podSelector:
        matchLabels:
          key8: value45
          key0: value6
